2.1.0:

Mon Mar 21 15:52:53 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 - tripplite.c: fix the reporting of the battery voltage and charge

   (Andrew Cook, Nicholas J. Kain) [Alioth Patch #301271]

Fri Mar 18 13:36:20 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 - driver.list: add the missing Powerware 5119 RM (genericups type=20)

 - drivers/main.c, nutupsdrv.8: brings the drivers usage message and
   the generic driver man page in line with the getopt processing.
   It also remove an unused -d option from the getopt call.

   (Niels Baggesen) [Alioth Patch #301145]

 - genericups.h, genericups.8, driver.list: add Generic RUPS 2000
   and AEC MiniGuard UPS 700 (using Megatec M2501 cable)

   (Nick Barnes) [Alioth Patch #301143]

2.0.1:

Thu Feb 24 00:55:20 CST 2005 / Russell Kroll <rkroll@exploits.org>

 - Final version number bump for release.

Wed Feb  2 22:35:12 CST 2005 / Russell Kroll <rkroll@exploits.org>

 - clients/Makefile.in: add @MISC_UPSCLI_OBJ@ to the clean rule so I
   don't leak .a files when distributing the tree.

 - upsclient.h, parseconf.h: minor extern tweaks for C++ use

   (Arnaud Quette) [patch-2.0.1-pre4_upsclient-cpp]

Thu Oct 21 01:02:08 CDT 2004 / Russell Kroll <rkroll@exploits.org>

 - mge-shut:

   - enhance the server side variables handling, and particularly the
     wrongly exposed PowerShare outlet description (outlet.*.desc) when
     these doesn't exists,
    - expose the detected model at upsdrv_initinfo() time
     (this will be standardised in 2.1 tree),
    - add NOVA models support,
    - update manpage and driver.list accordingly,
    - bump driver version to 0.60

   (Arnaud Quette) [patch-2.0.1_nova-shut]

Thu Oct 21 00:47:54 CDT 2004 / Russell Kroll <rkroll@exploits.org>

 - ups.conf, upsmon.conf, cmdvartab: fix doubled "with", bad example
   (old style hostname without ups@ in front), and add ups.power.nominal

   (Niels Baggesen)

Thu Oct 21 00:43:52 CDT 2004 / Russell Kroll <rkroll@exploits.org>
