@@ -231,6 +231,8 @@
 
 "Soltec"	"Winmate 525/625/800/1000"	""	"safenet"
 
+"SquareOne Power"	"QP1000"		""	"powermust"
+
 "SuperPower"	"HP360, Hope-550"	""	"fentonups"
 
 "Sweex"		"500/1000"	"smart - shipped with SafeNet"			"safenet"
